<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_lebar" />
    <EditText
        android:id="@+id/et_width"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/rounded_et"
        android:inputType="numberDecimal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_panjang" />
    <EditText
        android:id="@+id/et_length"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/rounded_et"
        android:inputType="numberDecimal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/label_tinggi" />
    <EditText
        android:id="@+id/et_height"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/rounded_et"
        android:inputType="numberDecimal" />
    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button" />
        <Button
            android:id="@+id/btn_calculate_luas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_luas" />
        <Button
            android:id="@+id/btn_calculate_keliling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_keliling" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/label_hasil"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>